--- a/kooplexhub/education/templates/course_configure.html
+++ b/kooplexhub/education/templates/course_configure.html
@@ -48,7 +48,7 @@
           </table>
         </div>
         <div class="d-flex ms-3 w-100 w-md-50">
-          <div class="d-flex bg-warning rounded p-2 w-100 mt-2 mt-md-0">
+          <div ata-toggle="tooltip" title="Please select an option from the image dropdown to check its description."  class="d-flex bg-warning rounded p-2 w-100 mt-2 mt-md-0">
             <p class="fw-bolder">Image description:&nbsp;</p>
             <p id="imageDescription"></p>
           </div>
