--- a/kooplexhub/container/templates/container_new.html
+++ b/kooplexhub/container/templates/container_new.html
@@ -3,9 +3,6 @@
 {% load static %}
 {% load extras %}
 
-{% block chardinhelp %}
-         url: "{% static 'chardinjs/help_new_environment.json' %}"
-{% endblock %}
 
 
 {% block realcontent %}
@@ -21,7 +18,7 @@
         </table>
       </div>
       <div class="d-flex w-100 w-md-50">
-        <div class="d-flex bg-warning rounded p-2 w-100 mt-2 mt-md-0">
+        <div ata-toggle="tooltip" title="Please select an option from the image dropdown to check its description."  class="d-flex bg-warning rounded p-2 w-100 mt-2 mt-md-0">
           <p class="fw-bolder">Image description:&nbsp;</p>
           <p id="imageDescription"></p>
         </div>
