--- a/kooplexhub/education/templates/course_partial_list.html
+++ b/kooplexhub/education/templates/course_partial_list.html
@@ -4,11 +4,6 @@
 {% load extras %}
 
 
-<style>
-    @media all and (max-width: 1265px) {
-      .thespace{ margin-top: 8px; }
-    }    
-</style>
 
 <div class="card bg-light border-secondary shadow mb-3" id="card-{{ course.id }}">
   <div class="card-header">
@@ -17,13 +12,12 @@
         <div class="d-flex flex-row justify-content-start" style="width:2%">
          <div>{% dropdown_start_open_stop bindings=coursecontainerbindings ancestor=course ancestor_type='course' next_page=next_page %}</div>
         </div>
-	  <div class="ms-5 d-flex flex-row justify-content-between" style="cursor: pointer; width:97%" onmouseover="this.style.fontWeight='bold';" 
-    onmouseout="this.style.fontWeight='normal'"
+	  <div class="ms-5 d-flex flex-row justify-content-between"
+	       style="width:97%" 
                data-bs-toggle="collapse" data-bs-target="#collapse-{{ course.id }}" aria-expanded="false" aria-controls="collapse-{{ course.id }}">
            <div class="d-flex flex-row justify-content-start" ><span id="course-name-{{ course.id }}"><i class="bi bi-arrow-down-square-fill pe-2" style="color: green;"></i>{{ course.name }}</span></div> 
             <div class="d-flex flex-row justify-content-end">
-		    {#<div>{% container_image container %}</div> #} {# fixme #}
-              <span class="badge rounded-pill bg-secondary"><i class="ri-image-2-line"></i>{{ course.image }}</span>
+              <div>{% container_image course.image %}</div>
         </div>
 	  </div>
 	</div>
