--- a/kooplexhub/education/templates/student_course_list.html
+++ b/kooplexhub/education/templates/student_course_list.html
@@ -1,89 +1,47 @@
-{% extends "layout.html" %}
-
-{% block submenu %}
-  {% include 'education_submenu.html' with title="Education" submenu="student" %}
-{% endblock %}
-
+{% extends "education_layout.html" %}
 
 {% load static %}
 
-{% block chardinhelp %}
-<link type="text/css" href="{% static 'chardinjs/chardinjs.css' %}" rel="stylesheet">
-<script src="{% static 'chardinjs/chardinjs.js' %}" type="text/javascript"></script>
-<script>
-   (function() {
-     $(function() {
-       $('body').chardinJs({
-         'attribute': 'data-intro',
-         url: "{% static 'chardinjs/courses.json' %}"
-       });
-   
-       // or trigger via an anchor tag
-       $('a[data-toggle="chardinjs"]').on('click', function (e) {
-         e.preventDefault();
-         $("div.envcard:first").find(".collapse").addClass('show');
-         return ($('body').data('chardinJs')).toggle();
-       });
-   
-         return $('body').on('chardinJs:stop', function () {
-         //$("div.envcard:first").find(".collapse").removeClass('show');
 
-       });
+{% block realcontent %}
+{% if studentcoursebindinglist|length %}
+  <input class="form-control me-2 mb-3 mt-3" type="text" id="search_course" placeholder="Search course" title="Type in a name">
+  <div id="containerListPane" >
+    {% for ucb in studentcoursebindinglist %}
+       {% include 'course_partial_list.html' with next_page='education:student' course=ucb.course coursecontainerbindings=ucb.coursecontainerbindings is_teacher=False tooltip="Submit assignments" %}
+    {% endfor %}
+  </div>
+{% else %}
+  <div class="alert alert-warning" role="warning">
+    <p></p>
+  </div>
+{% endif %}
+{% endblock %}
 
-     });
-   }).call(this);
+{% block scripts %}
+<script>  
+$("#search_course").keyup(function() {
+  var pattern = $( this ).val().toUpperCase();
+  console.log( "search: " + pattern );
+  $("span[id^='course-name-'").each(function() {
+    var projectid = $( this ).attr('id').split('-')[2];
+    var hide_it = true;
+    var card = $("#card-" + projectid);
+    if (pattern.length > 0) {
+      var name = $( this ).html().toUpperCase();
+      if ( name.indexOf(pattern) > -1 ) {
+        hide_it = false;
+      }
+    } else {
+      hide_it = false;
+    }
+    if (hide_it) {
+      $( card ).hide();
+    } else {
+      $( card ).show();
+    }
+  });
+});
 </script>
-
-<script>
-  function myFunction() {
-      var input, filter, ul, li, a, i, txtValue;
-      input = document.getElementById("myInput");
-      filter = input.value.toUpperCase();
-      ul = document.getElementById("containerListPane");
-      li = ul.getElementsByTagName("tr");
-      for (i = 0; i < li.length; i++) {
-
-	      if (li[i].hasAttribute("class")) {
-                    a = li[i]; 
-                    atag = li[i].getAttribute("class");   
-                    if (atag.indexOf("search") > -1) {
-                      //console.log(a);
-                      txtValue = a.id;
-                                        if (txtValue.toUpperCase().indexOf(filter) > -1) {
-                                            li[i].style.display = "";
-                                        } else {
-                                            li[i].style.display = "none";
-                                        }
-                    }
-                        }
-                        }
-  }
-</script>
-
-
 {% endblock %}
 
-
-
-{% block main_content_right %}
-
-<div data-intro="#course_list">
-  {% for ucb in studentcoursebindinglist %}
-     {% include 'course_partial_list.html' with next_page='education:student' course=ucb.course coursecontainerbindings=ucb.coursecontainerbindings is_teacher=False tooltip="Submit assignments" %}
-  {% endfor %}
-</div>
-{% endblock %}
-
-{% comment %}
-{% block main_content_left %}
-  {#% include 'project/hint_join.html' %#}
-{% endblock %}
-
-{% block navsearch %}
-<form class="d-flex" action="{% url 'project:join' %}" method="get">
-  {#% csrf_token %#}
-  <input class="form-control me-2" type="search" name="project_or_creator" placeholder="Search project/creator" value="{{ user.profile.search_project_join }}" aria-label="Search">
-  <button class="btn btn-outline-secondary" type="submit" name="button" value="search">Search</button>
-</form>
-{% endblock %}
-{% endcomment %}
